partial implementarion barcode overlay - preview DESIGN ONLY

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="quickie_gray">#dadce0</color>
+    <color name="quickie_white">#ffffff</color>
+    <color name="quickie_transparent">#00000000</color>
+    <color name="quickie_accent_fallback">#03dac5</color>
 </resources>
